--- a/style.css
+++ b/style.css
@@ -34,12 +34,18 @@ main {
 
 }
 
+.descricao {
+    margin-bottom: 2.5rem;
+}
+
 .descricao h1 {
     color: var(--gray-800);
     margin-bottom: 1rem;
     font-size: 1.5625rem;
 }
 
-p {
-
+.descricao p {
+    font-size: 0.8125rem;
+    color: var(--gray-600);
+    margin-bottom: 2.5rem;
 }
