--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
 :root {
     --gray-800: #1E293B;
     --gray-600: #475569;
+    --purple: #763aed
 }
 
     /* número = 20 */
@@ -48,4 +49,32 @@ main {
     font-size: 0.8125rem;
     color: var(--gray-600);
     margin-bottom: 2.5rem;
+}
+
+.input-box {
+    display: flex;
+    flex-direction: column;
+}
+
+.input-box div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.login label {
+    font-size: 0.875rem;
+    color: var(--gray-800);
+    font-weight: 600;
+}
+
+.login a {
+    color: var(--purple);
+    text-decoration: none;
+    font-size: 0.875rem;
+    font-weight: 600;
+}
+
+.login a:hover {
+    text-decoration: underline;
 }
