--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
     --gray-400: #94a3b8;
     --gray-200: #e2e8f0;
     --purple: #763aed;
+    --ligth-purple: #9f67ff;
     --white: #fff;
     
 }
@@ -116,6 +117,12 @@ main {
     color: var(--white);
 }
 
+.login button:hover {
+    background: var(--ligth-purple);
+    transition: 0.3s;
+    cursor: pointer;
+}
+
 .login > p {
     color: var(--gray-600);
 }
@@ -140,6 +147,7 @@ main {
         margin: 2.5rem 7rem 7rem;
 
         height: fit-content;
+        
     }
 
     header img {
@@ -154,10 +162,21 @@ main {
 
     .conteudo {
         width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 
     .bg-desktop {
         display: block;
         width: 100%;
+    }
+
+    .descricao h1 {
+        font-size: 2.25rem;
+    }
+
+    .descricao p {
+        font-size: 1rem;
     }
 }
