--- a/style.css
+++ b/style.css
@@ -136,9 +136,16 @@ main {
     display: none;
 }
 
+.bg-desktop img {
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
 @media(min-width: 1000px) {
     body {
         display: flex;
+        height: 100vh;
     }
 
     header {
